Manual Lock Splitting issue