@@ -3,6 +3,7 @@ package javaprepfirstscope;
 import java.util.concurrent.Executors;
 
 // Striped locks: Reducing the probability that two threads contend for the same lock
+// Lock Striping - multiple locks guarding different partitions of the same data structure
 public class StripedStats {
     private final long[] counters;
     private final Object[] locks;
@@ -24,7 +25,7 @@ public class StripedStats {
 
     static void main() {
         StripedStats stripedStats = new StripedStats(25);
-        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+        try (var executor = Executors.newFixedThreadPool(2)) {
             executor.submit(() -> stripedStats.increment(5));
             executor.submit(() -> stripedStats.increment(6));
         }
